src/objects/Supplier_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_TF__c</fullName>
        <label>Fiscal Year Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_Desc__c</fullName>
        <label>Grouping Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Spend_CurrentYear_TF__c</fullName>
        <label>Net Spend CurrentYear TF</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Spend_LastYear_TF__c</fullName>
        <label>Net Spend LastYear TF</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Spend_in_USD__c</fullName>
        <label>Net Spend</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <label>Supplier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMI Supplier Metrics</relationshipLabel>
        <relationshipName>SMI_Supplier_Metrics1_DF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Metric_TF__c</fullName>
        <externalId>true</externalId>
        <label>Unique_Metric_TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Supplier Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier_Account__c</columns>
        <columns>Fiscal_Month__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Grouping_Desc__c</columns>
        <columns>Net_Spend_in_USD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SM-{000}</displayFormat>
        <label>SMI Supplier Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>